# codebase-notes

./: .gitignore  SKILL.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: fix-executor.md  fix-planner.md  review-build-runtime-verifier.md
commands/: answer.md  check.md  commit-explore.md  commits.md  cron.md  diagram.md  explore.md  init.md  migrate.md  research.md  status.md  update.md
docs/superpowers/plans/: 2026-03-18-codebase-notes-v2.md  2026-03-18-plugin-restructure.md  2026-03-26-code-review-skill.md  2026-03-26-hybrid-architecture-restructure.md  (+3 more)
hooks/: context-prime  hooks.json  vault-git-sync
references/: RULES-template.md  shared-context.md
scripts/: __init__.py  __main__.py  code_review.py  commits.py  context_index.py  cron.py  migrate.py  nav_links.py  render.py  repo_id.py  review-loop.sh  scaffold.py  staleness.py  stats.py  vault.py  verify_diagrams.py
skills/answer/: SKILL.md
skills/check/: SKILL.md
skills/code-review/: SKILL.md
skills/commits/: SKILL.md
skills/cron/: SKILL.md
skills/diagram/: SKILL.md
skills/explore/: SKILL.md
skills/init/: SKILL.md
skills/migrate/: SKILL.md
skills/notes-stats/: SKILL.md
skills/project/: SKILL.md
skills/research/: SKILL.md
skills/stats/: SKILL.md
skills/update/: SKILL.md
tests/: test_cli.py  test_code_review.py  test_commits.py  test_context_index.py  test_cron.py  test_migrate.py  test_migrate_to_vault.py  test_nav_links.py  test_render.py  test_repo_id.py  test_scaffold.py  test_staleness.py  test_stats.py  test_vault.py
(+14 files in other folders)
