[project]
name = "codebase-notes-scripts"
version = "2.17.0"
description = "CLI scripts for codebase-notes skill"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0,<7.0",
    "Pillow>=10.0,<12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
